fix gap on mobile view for faq section

--- a/src/features/layout/accordion/accordion.module.scss
+++ b/src/features/layout/accordion/accordion.module.scss
@@ -121,6 +121,7 @@
       @media screen and (width <= 800px) {
         width: auto;
         position: relative;
+        margin-top: 1.25rem;
         margin-right: 0;
       }
     }
